--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -23,7 +23,7 @@
     <link rel="manifest" href="/manifest.json" />
 
     <!-- Title -->
-    <title>Nest React boilerplate</title>
+    <title>RELIEF•LINK</title>
   </head>
   <body>
     <div id="root"></div>
